--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 		</div>
 		<div id='generators' class='tab' style='display:block'>
 			<p>你擁有<span id="points">0</span>點</p>
-			<button onclick="player.points=player.points.plus(1)" class="button">Get points</button>
+			<button onclick="player.points=player.points.plus(1)" class="button">獲得點</button>
 			<table style="width:100%">
 				<tbody id="parent">
 					<tr class='verylarge'>
 						<td colspan=4 align="right">
-							<button onclick="maxAll()" class="button">Max All</button>
+							<button onclick="maxAll()" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row1">
 						<td>
-							Tier 1 generator <span id="mult1">x1</span>
+							第一級生產器<span id="mult1">x1</span>
 						</td>
 						<td>
 							<div id="tier1Amount">0</div>
@@ -83,7 +83,7 @@
 					</tr>
 					<tr id="row2" style="display: none;">
 						<td>
-							Tier 2 generator <span id="mult2">x1</span>
+							第二級生產器<span id="mult2">x1</span>
 						</td>
 						<td>
 							<div id="tier2Amount">0</div>
@@ -97,7 +97,7 @@
 					</tr>
 					<tr id="row3" style="display: none;">
 						<td>
-							Tier 3 generator <span id="mult3">x1</span>
+							第三級生產器<span id="mult3">x1</span>
 						</td>
 						<td>
 							<div id="tier3Amount">0</div>
@@ -111,7 +111,7 @@
 					</tr>
 					<tr id="row4" style="display: none;">
 						<td>
-							Tier 4 generator <span id="mult4">x1</span>
+							第四級生產器<span id="mult4">x1</span>
 						</td>
 						<td>
 							<div id="tier4Amount">0</div>
@@ -125,7 +125,7 @@
 					</tr>
 					<tr id="row5" style="display: none;">
 						<td>
-							Tier 5 generator <span id="mult5">x1</span>
+							第五級生產器<span id="mult5">x1</span>
 						</td>
 						<td>
 							<div id="tier5Amount">0</div>
@@ -139,7 +139,7 @@
 					</tr>
 					<tr id="row6" style="display: none;">
 						<td>
-							Tier 6 generator <span id="mult6">x1</span>
+							第六級生產器<span id="mult6">x1</span>
 						</td>
 						<td>
 							<div id="tier6Amount">0</div>
@@ -153,7 +153,7 @@
 					</tr>
 					<tr id="row7" style="display: none;">
 						<td>
-							Tier 7 generator <span id="mult7">x1</span>
+							第七級生產器<span id="mult7">x1</span>
 						</td>
 						<td>
 							<div id="tier7Amount">0</div>
@@ -167,7 +167,7 @@
 					</tr>
 					<tr id="row8" style="display: none;">
 						<td>
-							Tier 8 generator <span id="mult8">x1</span>
+							第八級生產器<span id="mult8">x1</span>
 						</td>
 						<td>
 							<div id="tier8Amount">0</div>
@@ -181,7 +181,7 @@
 					</tr>
 					<tr id="row9" style="display: none;">
 						<td>
-							Tier 9 generator <span id="mult9">x1</span>
+							第九級生產器<span id="mult9">x1</span>
 						</td>
 						<td>
 							<div id="tier9Amount">0</div>
@@ -194,7 +194,7 @@
 						</td>
 					</tr>					<tr id="row10" style="display: none;">
 						<td>
-							Tier 10 generator <span id="mult10">x1</span>
+							第十級生產器<span id="mult10">x1</span>
 						</td>
 						<td>							<div id="tier10Amount">0</div>
 						</td>
