--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<div id="tier1Amount">0</div>
 						</td>
 						<td>
-							<button id="buy1" onclick="buyGen(1)" align="right" class="button">Cost: 10</button>
+							<button id="buy1" onclick="buyGen(1)" align="right" class="button">成本: 10</button>
 						</td>
 						<td align="right">
 							<button id="buy1Max" onclick="buyMaxGen(1)" align="right" class="button">Buy Max</button>
@@ -89,7 +89,7 @@
 							<div id="tier2Amount">0</div>
 						</td>
 						<td>
-							<button id="buy2" onclick="buyGen(2)" align="right" class="button">Cost: 100</button>
+							<button id="buy2" onclick="buyGen(2)" align="right" class="button">成本: 100</button>
 						</td>
 						<td align="right">
 							<button id="buy2Max" onclick="buyMaxGen(2)" align="right" class="button">Buy Max</button>
@@ -103,7 +103,7 @@
 							<div id="tier3Amount">0</div>
 						</td>
 						<td>
-							<button id="buy3" onclick="buyGen(3)" align="right" class="button">Cost: 1000</button>
+							<button id="buy3" onclick="buyGen(3)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
 							<button id="buy3Max" onclick="buyMaxGen(3)" align="right" class="button">Buy Max</button>
@@ -117,7 +117,7 @@
 							<div id="tier4Amount">0</div>
 						</td>
 						<td>
-							<button id="buy4" onclick="buyGen(4)" align="right" class="button">Cost: blef</button>
+							<button id="buy4" onclick="buyGen(4)" align="right" class="button">成本: blef</button>
 						</td>
 						<td align="right">
 							<button id="buy4Max" onclick="buyMaxGen(4)" align="right" class="button">Buy Max</button>
@@ -131,7 +131,7 @@
 							<div id="tier5Amount">0</div>
 						</td>
 						<td>
-							<button id="buy5" onclick="buyGen(5)" align="right" class="button">Cost: 1000</button>
+							<button id="buy5" onclick="buyGen(5)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
 							<button id="buy5Max" onclick="buyMaxGen(5)" align="right" class="button">Buy Max</button>
@@ -145,7 +145,7 @@
 							<div id="tier6Amount">0</div>
 						</td>
 						<td>
-							<button id="buy6" onclick="buyGen(6)" align="right" class="button">Cost: 1000</button>
+							<button id="buy6" onclick="buyGen(6)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
 							<button id="buy6Max" onclick="buyMaxGen(6)" align="right" class="button">Buy Max</button>
@@ -159,7 +159,7 @@
 							<div id="tier7Amount">0</div>
 						</td>
 						<td>
-							<button id="buy7" onclick="buyGen(7)" align="right" class="button">Cost: 1000</button>
+							<button id="buy7" onclick="buyGen(7)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
 							<button id="buy7Max" onclick="buyMaxGen(7)" align="right" class="button">Buy Max</button>
@@ -173,7 +173,7 @@
 							<div id="tier8Amount">0</div>
 						</td>
 						<td>
-							<button id="buy8" onclick="buyGen(8)" align="right" class="button">Cost: 1000</button>
+							<button id="buy8" onclick="buyGen(8)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
 							<button id="buy8Max" onclick="buyMaxGen(8)" align="right" class="button">Buy Max</button>
@@ -187,7 +187,7 @@
 							<div id="tier9Amount">0</div>
 						</td>
 						<td>
-							<button id="buy9" onclick="buyGen(9)" align="right" class="button">Cost: 1000</button>
+							<button id="buy9" onclick="buyGen(9)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
 							<button id="buy9Max" onclick="buyMaxGen(9)" align="right" class="button">Buy Max</button>
@@ -196,10 +196,11 @@
 						<td>
 							第十級生產器<span id="mult10">x1</span>
 						</td>
-						<td>							<div id="tier10Amount">0</div>
+						<td>							
+							<div id="tier10Amount">0</div>
 						</td>
 						<td>
-							<button id="buy10" onclick="buyGen(10)" align="right" class="button">Cost: 1000</button>
+							<button id="buy10" onclick="buyGen(10)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
 							<button id="buy10Max" onclick="buyMaxGen(10)" align="right" class="button">Buy Max</button>
