--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<button id="buy1" onclick="buyGen(1)" align="right" class="button">成本: 10</button>
 						</td>
 						<td align="right">
-							<button id="buy1Max" onclick="buyMaxGen(1)" align="right" class="button">Buy Max</button>
+							<button id="buy1Max" onclick="buyMaxGen(1)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row2" style="display: none;">
@@ -92,7 +92,7 @@
 							<button id="buy2" onclick="buyGen(2)" align="right" class="button">成本: 100</button>
 						</td>
 						<td align="right">
-							<button id="buy2Max" onclick="buyMaxGen(2)" align="right" class="button">Buy Max</button>
+							<button id="buy2Max" onclick="buyMaxGen(2)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row3" style="display: none;">
@@ -106,7 +106,7 @@
 							<button id="buy3" onclick="buyGen(3)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
-							<button id="buy3Max" onclick="buyMaxGen(3)" align="right" class="button">Buy Max</button>
+							<button id="buy3Max" onclick="buyMaxGen(3)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row4" style="display: none;">
@@ -120,7 +120,7 @@
 							<button id="buy4" onclick="buyGen(4)" align="right" class="button">成本: blef</button>
 						</td>
 						<td align="right">
-							<button id="buy4Max" onclick="buyMaxGen(4)" align="right" class="button">Buy Max</button>
+							<button id="buy4Max" onclick="buyMaxGen(4)" align="right" class="button">全部最大</button>
 							</td>
 					</tr>
 					<tr id="row5" style="display: none;">
@@ -134,7 +134,7 @@
 							<button id="buy5" onclick="buyGen(5)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
-							<button id="buy5Max" onclick="buyMaxGen(5)" align="right" class="button">Buy Max</button>
+							<button id="buy5Max" onclick="buyMaxGen(5)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row6" style="display: none;">
@@ -148,7 +148,7 @@
 							<button id="buy6" onclick="buyGen(6)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
-							<button id="buy6Max" onclick="buyMaxGen(6)" align="right" class="button">Buy Max</button>
+							<button id="buy6Max" onclick="buyMaxGen(6)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row7" style="display: none;">
@@ -162,7 +162,7 @@
 							<button id="buy7" onclick="buyGen(7)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
-							<button id="buy7Max" onclick="buyMaxGen(7)" align="right" class="button">Buy Max</button>
+							<button id="buy7Max" onclick="buyMaxGen(7)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row8" style="display: none;">
@@ -176,7 +176,7 @@
 							<button id="buy8" onclick="buyGen(8)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
-							<button id="buy8Max" onclick="buyMaxGen(8)" align="right" class="button">Buy Max</button>
+							<button id="buy8Max" onclick="buyMaxGen(8)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 					<tr id="row9" style="display: none;">
@@ -190,7 +190,7 @@
 							<button id="buy9" onclick="buyGen(9)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
-							<button id="buy9Max" onclick="buyMaxGen(9)" align="right" class="button">Buy Max</button>
+							<button id="buy9Max" onclick="buyMaxGen(9)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>					<tr id="row10" style="display: none;">
 						<td>
@@ -203,7 +203,7 @@
 							<button id="buy10" onclick="buyGen(10)" align="right" class="button">成本: 1000</button>
 						</td>
 						<td align="right">
-							<button id="buy10Max" onclick="buyMaxGen(10)" align="right" class="button">Buy Max</button>
+							<button id="buy10Max" onclick="buyMaxGen(10)" align="right" class="button">全部最大</button>
 						</td>
 					</tr>
 				</tbody>
