--- a/index.html
+++ b/index.html
@@ -214,55 +214,55 @@
 				<div id="doubleRow1">
 					<button id="DT1" class="upgrade" onclick="buyUpgrade('DT1')">
 						第一級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T1DoubleCount">1</span><br/>
-						Cost: <span id="T1DoubleCost">10</span> line segments
+						當前加成: x<span id="T1DoubleCount">1</span><br/>
+						成本: <span id="T1DoubleCost">10</span> line segments
 					</button>
 					<button id="DT2" class="upgrade" onclick="buyUpgrade('DT2')">
 						第二級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T2DoubleCount">1</span><br/>
-						Cost: <span id="T2DoubleCost">10</span> line segments
+						當前加成: x<span id="T2DoubleCount">1</span><br/>
+						成本: <span id="T2DoubleCost">10</span> line segments
 					</button>
 					<button id="DT3" class="upgrade" onclick="buyUpgrade('DT3')">
 						第三級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T3DoubleCount">1</span><br/>
-						Cost: <span id="T3DoubleCost">10</span> line segments
+						當前加成: x<span id="T3DoubleCount">1</span><br/>
+						成本: <span id="T3DoubleCost">10</span> line segments
 					</button>
 					<button id="DT4" class="upgrade" onclick="buyUpgrade('DT4')" style="display:none">
 						第四級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T4DoubleCount">1</span><br/>
-						Cost: <span id="T4DoubleCost">15</span> line segments
+						當前加成: x<span id="T4DoubleCount">1</span><br/>
+						成本: <span id="T4DoubleCost">15</span> line segments
 					</button>
 					<button id="DT5" class="upgrade" onclick="buyUpgrade('DT5')" style="display:none">
 						第五級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T5DoubleCount">1</span><br/>
-						Cost: <span id="T5DoubleCost">20</span> line segments
+						當前加成: x<span id="T5DoubleCount">1</span><br/>
+						成本: <span id="T5DoubleCost">20</span> line segments
 					</button>
 				</div>
 				<div id="doubleRow2">
 					<button id="DT6" class="upgrade" onclick="buyUpgrade('DT6')" style="display:none">
 						第六級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T6DoubleCount">1</span><br/>
-						Cost: <span id="T6DoubleCost">25</span> line segments
+						當前加成: x<span id="T6DoubleCount">1</span><br/>
+						成本: <span id="T6DoubleCost">25</span> line segments
 					</button>
 					<button id="DT7" class="upgrade" onclick="buyUpgrade('DT7')" style="display:none">
 						第七級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T7DoubleCount">1</span><br/>
-						Cost: <span id="T7DoubleCost">30</span> line segments
+						當前加成: x<span id="T7DoubleCount">1</span><br/>
+						成本: <span id="T7DoubleCost">30</span> line segments
 					</button>
 					<button id="DT8" class="upgrade" onclick="buyUpgrade('DT8')" style="display:none">
 						第八級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T8DoubleCount">1</span><br/>
-						Cost: <span id="T8DoubleCost">35</span> line segments
+						當前加成: x<span id="T8DoubleCount">1</span><br/>
+						成本: <span id="T8DoubleCost">35</span> line segments
 					</button>
 					<button id="DT9" class="upgrade" onclick="buyUpgrade('DT9')" style="display:none">
 						第九級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T9DoubleCount">1</span><br/>
-						Cost: <span id="T9DoubleCost">40</span> line segments
+						當前加成: x<span id="T9DoubleCount">1</span><br/>
+						成本: <span id="T9DoubleCost">40</span> line segments
 					</button>
 					<button id="DT10" class="upgrade" onclick="buyUpgrade('DT10')" style="display:none">
 						第十級生產器生產力翻倍<br/>
-						Current Bonus: x<span id="T10DoubleCount">1</span><br/>
-						Cost: <span id="T10DoubleCost">45</span> line segments
+						當前加成: x<span id="T10DoubleCount">1</span><br/>
+						成本: <span id="T10DoubleCost">45</span> line segments
 					</button>
 				</div>
 			</div>
